klases/katinas.log
adomas@adomoarchlaptop ~/darbai/oop/ketvirtoji/klases (git)-[master] % date; clang++ katinas.cpp                                                                   :(
An Bal 16 10:02:04 EEST 2013
katinas.cpp:1:39: error: use of undeclared identifier 'std'
Katinas(int svoris, int gimimo_metai, std::string vardas, int koju_skaicius): Gyvunas(svoris, gimimo_metai, vardas, koju_skaicius) {
                                      ^
katinas.cpp:1:1: error: C++ requires a type specifier for all declarations
Katinas(int svoris, int gimimo_metai, std::string vardas, int koju_skaicius): Gyvunas(svoris, gimimo_metai, vardas, koju_skaicius) {
^~~~~~~
katinas.cpp:1:77: error: only constructors take base initializers
Katinas(int svoris, int gimimo_metai, std::string vardas, int koju_skaicius): Gyvunas(svoris, gimimo_metai, vardas, koju_skaicius) {
                                                                            ^
katinas.cpp:2:2: error: use of undeclared identifier 'std'
        std::cout << "Miau, a<U+0161> esu katinas. Mane k<U+0105> tik suk<U+016B>r<U+0117>." << std::endl;
        ^
katinas.cpp:2:66: error: use of undeclared identifier 'std'
        std::cout << "Miau, a<U+0161> esu katinas. Mane k<U+0105> tik suk<U+016B>r<U+0117>." << std::endl;
                                                                                                ^
5 errors generated.

An Bal 16 10:17:44 EEST 2013
katinas.cpp:8:37: error: 'vardas' is a private member of 'Gyvunas'
        std::cout << "Miau! A<U+0161> vardu " << vardas << ".\n";
                                                 ^
./gyvunas.h:11:14: note: declared private here
        std::string vardas;
                    ^
1 error generated.

An Bal 16 10:28:51 EEST 2013
/tmp/katinas-rhkLPT.o:klases/katinas.cpp:function Katinas::Katinas(int, int, std::string, int): error: undefined reference to 'vtable for Katinas'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
